# -any-auto-register-Docker

./: 127_Full.txt  127_matches.txt  127_sample.txt  Dockerfile  docker-compose.yml  docker-entrypoint.sh  extration_results.txt  main.py  railway.toml  sentinel_matches.txt
注册机完整协议版/zhuce6-share/: .env.example  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
注册机完整协议版/zhuce6-share/config/: cfmail_accounts.example.json  cfmail_provision.example.env
注册机完整协议版/zhuce6-share/core/: __init__.py  base_mailbox.py  base_platform.py  cfmail.py  cfmail_domain_rotation.py  cfmail_provisioner.py  chatgpt_flow_runner.py  doctor.py  env_loader.py  http_client.py  mailbox_dedupe.py  paths.py  process_manager.py  proxy_pool.py  registration.py  registry.py  settings.py  setup_wizard.py
注册机完整协议版/zhuce6-share/dashboard/: api.py  zhuce6.html
注册机完整协议版/zhuce6-share/docs/: CODEX_PROVIDER_PROTOCOL_NOTES.md  CONFIG_REFERENCE.md  POOL_FORMAT.md  TROUBLESHOOTING.md
注册机完整协议版/zhuce6-share/ops/: __init__.py  account_survival.py  cleanup.py  common.py  d1_cleanup.py  responses_survival.py  rotate.py  rotate_log.py  rotate_probe.py  rotate_promote.py  rotate_runtime.py  scan.py  service.py  sub2api_adapter.py  sub2api_client.py  update_priority.py  validate.py
注册机完整协议版/zhuce6-share/scripts/: chatgpt_exchange_callback.py  chatgpt_preflight.py  chatgpt_register_once.py  cleanup_stale_cf_resources.py  run_responses_survival.py  setup_cfmail.py
注册机完整协议版/zhuce6-share/tests/: test_account_survival.py  test_backend_clients.py  test_base_mailbox.py  test_cfmail_rotation.py  test_doctor.py  (+28 more)
(+6 files in other folders)
