[project]
name = "zhuce6"
version = "0.1.0"
description = "Unified registration and CPA operations system for zhuce6"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "curl-cffi>=0.14.0",
    "fastapi>=0.115.0",
    "PyYAML>=6.0.2",
    "pytest>=8.3.0",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.0",
    "httpx>=0.28.1",
    "cbor2>=5.4.0",
    "jwcrypto>=1.5.0",
    "filelock>=3.8.0",
    "psutil>=5.9.0",
    "socksio>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
